--- a/styles/common/_grid.scss
+++ b/styles/common/_grid.scss
@@ -13,6 +13,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    height: 32px;
     i.fa-ok {
       display: none;
       padding-top: 0;
